Test output of histograms_1d
- Example for initializing a gate with a std::function in test.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,8 @@ if(BUILD_TESTS)
     add_test(NAME calibrate_test_data COMMAND calibrate_tree test_part.log --output test_cal.root --log --list --block 100)
     add_test(NAME create_1d_histograms COMMAND histograms_1d test_cal.log --output test_1d.root --list)
     add_test(NAME calibrate_and_create_1d_histograms COMMAND histograms_1d test.root --output test_1d_cal.root --calibrate)
+    add_test(NAME test_1d_histograms_from_calibrated_trees COMMAND test_histograms_1d test_1d.root --n 100)
+    add_test(NAME test_1d_histograms_from_direct_histogramming COMMAND test_histograms_1d test_1d_cal.root --n 100)
     add_test(NAME create_2d_histograms COMMAND histograms_2d test_cal.log --output test_2d.root --list)
     add_test(NAME time_calibration COMMAND energy_vs_time test_cal.log --output test_et.root --rebin_energy 32 --list)
     add_test(NAME history COMMAND history test_cal.log --output test_history.root --list)
@@ -65,3 +67,4 @@ configure_file(include/programs/histograms_2d.hpp.in include/programs/histograms
 configure_file(include/programs/history.hpp.in include/programs/history.hpp)
 configure_file(include/test/sampler.hpp.in include/test/sampler.hpp)
 configure_file(include/test/test_histograms_1d_raw.hpp.in include/test/test_histograms_1d_raw.hpp)
+configure_file(include/test/test_histograms_1d.hpp.in include/test/test_histograms_1d.hpp)
