Reader class for more modular raw-data IO
- Preparation for a mvlclst-file reader.
- All Reader classes should inherit from ReaderBase to provide the same API. This is important because of the way one switches between the readers (see next point)
- Introduce new CMake build variable READER to switch between different readers. Depending on its value, a different header will be loaded that implements a "Reader" class.
- Demonstrate the usage of the reader class in histograms_1d_raw.
- Reader deprecates the set_up_tree function provided by the CommandLineParser. In the future, will reduce the CommandLineParser code a lot so that it only does what the name suggests.
- Fix header include in histograms_1d_raw (the headers of all programs were the same until now, that's why the error did not have an effect)

--- a/source/reader/CMakeLists.txt
+++ b/source/reader/CMakeLists.txt
@@ -12,25 +12,13 @@
 #    You should have received a copy of the GNU General Public License along with 
 #    carolina. If not, see <https://www.gnu.org/licenses/>.
 
-FILES=\
-`ls include/analysis/*.hpp`" "\
-`ls include/experiments/*.hpp`" "\
-`ls include/detectors/*.hpp`" "\
-`ls include/io/*.hpp`" "\
-`ls include/modules/*.hpp`" "\
-`ls include/programs/*.hpp.in`" "\
-`ls include/reader/*.hpp`" "\
-`ls include/test/*.hpp.in`" "\
-`ls source/analysis/*.cpp`" "\
-`ls source/detectors/*.cpp`" "\
-`ls source/io/*.cpp`" "\
-`ls source/modules/*.cpp`" "\
-`ls source/programs/*.cpp`" "\
-`ls source/reader/*.cpp`" "\
-`ls source/test/*.cpp`" "\
+include_directories(${CMAKE_SOURCE_DIR}/include/analysis)
+include_directories(${CMAKE_SOURCE_DIR}/include/detectors)
+include_directories(${CMAKE_SOURCE_DIR}/include/experiments)
+include_directories(${CMAKE_SOURCE_DIR}/include/io)
+include_directories(${CMAKE_SOURCE_DIR}/include/modules)
+include_directories(${CMAKE_SOURCE_DIR}/include/reader)
 
-for FILE in $FILES
-do
-    echo Formatting $FILE ...
-    clang-format -i -style="{IndentWidth: 4, TabWidth: 4}" $FILE
-done
+add_library(tree tree.cpp)
+target_include_directories(tree PUBLIC ${CMAKE_BINARY_DIR}/include/reader)
+target_link_libraries(tree ${ROOT_LIBRARIES})
