--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(ROOT REQUIRED)
 include(${ROOT_USE_FILE})
 
 set(ANALYSIS "test.hpp" CACHE STRING "Set name of header file in ${CMAKE_SOURCE_DIR}/include/experiments/ that contains the analysis configuration. Default: 'test.hpp'.")
+set(READER "tree" CACHE STRING "Determine whether raw data should be read from a ROOT TTree object ('tree') or an MVLC listfile ('mvlclst', not implemented at the moment).")
 
 add_compile_options(-Wall -Wextra)
 option(BUILD_TESTS "Build unit tests. Default: ON" ON)
@@ -38,6 +39,7 @@ add_subdirectory(source/detectors)
 add_subdirectory(source/io)
 add_subdirectory(source/modules)
 add_subdirectory(source/programs)
+add_subdirectory(source/reader)
 if(BUILD_TESTS)
     add_subdirectory(source/test)
     add_test(NAME tfile_utilities COMMAND test_tfile_utilities)
@@ -60,11 +62,13 @@ endif(BUILD_TESTS)
 
 configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
 configure_file(include/programs/calibrate_tree.hpp.in include/programs/calibrate_tree.hpp)
+configure_file(include/programs/chapl.hpp.in include/programs/chapl.hpp)
 configure_file(include/programs/energy_vs_time.hpp.in include/programs/energy_vs_time.hpp)
 configure_file(include/programs/histograms_1d.hpp.in include/programs/histograms_1d.hpp)
 configure_file(include/programs/histograms_1d_raw.hpp.in include/programs/histograms_1d_raw.hpp)
 configure_file(include/programs/histograms_2d.hpp.in include/programs/histograms_2d.hpp)
 configure_file(include/programs/history.hpp.in include/programs/history.hpp)
+configure_file(include/reader/reader.hpp.in include/reader/reader.hpp)
 configure_file(include/test/sampler.hpp.in include/test/sampler.hpp)
 configure_file(include/test/test_histograms_1d_raw.hpp.in include/test/test_histograms_1d_raw.hpp)
 configure_file(include/test/test_histograms_1d.hpp.in include/test/test_histograms_1d.hpp)
