--- a/include/reader/reader.hpp.in
+++ b/include/reader/reader.hpp.in
@@ -17,5 +17,25 @@
 
 #pragma once
 
-#include "@ANALYSIS@"
-#include "@READER@.hpp"
+#include <string>
+
+using std::string;
+
+#include <vector>
+
+using std::vector;
+
+#include "analysis.hpp"
+#include "tfile_utilities.hpp"
+
+struct ReaderBase {
+    ReaderBase(const vector<string> input_files, const long long first = 0,
+                   const long long last = -1)
+        : input_files(input_files), first(first), last(last){};
+    virtual void initialize(Analysis &analysis, const string option, const vector<bool> counter_values={false}, const vector<bool> amp_t_tref_ts={false, false, false, false}) = 0;
+    virtual bool read() = 0;
+
+    vector<string> input_files;
+    long long entry;
+    long long first, last;
+};
