--- a/include/test/sampler.hpp.in
+++ b/include/test/sampler.hpp.in
@@ -26,7 +26,7 @@ using std::dynamic_pointer_cast;
 
 #include "TH1.h"
 
-#include "@ANALYSIS@"
+#include "@ANALYSIS@.hpp"
 
 #include "inverse_calibration.hpp"
 
