--- a/include/reader/reader.hpp.in
+++ b/include/reader/reader.hpp.in
@@ -33,7 +33,7 @@ struct ReaderBase {
                    const long long last = -1)
         : input_files(input_files), first(first), last(last){};
     virtual void initialize(Analysis &analysis, const string option, const vector<bool> counter_values={false}, const vector<bool> amp_t_tref_ts={false, false, false, false}) = 0;
-    virtual bool read() = 0;
+    virtual bool read(Analysis &analysis) = 0;
 
     vector<string> input_files;
     long long entry;
