Implement MDPP16-QDC
- Realized that the code is actually the same as for the SCP firmware, but keep two separate implementation in case one would like to use the additional integration_short information of the QDC in the future.

--- a/source/io/CMakeLists.txt
+++ b/source/io/CMakeLists.txt
@@ -33,4 +33,4 @@ add_library(progress_printer progress_printer.cpp)
 
 add_executable(split_tree split_tree.cpp)
 target_include_directories(split_tree PUBLIC ${CMAKE_BINARY_DIR}/include/io)
-target_link_libraries(split_tree analysis ${Boost_LIBRARIES} command_line_parser counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 mdpp16_scp progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
+target_link_libraries(split_tree analysis ${Boost_LIBRARIES} command_line_parser counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 mdpp16_scp mdpp16_qdc progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
