No interdependence between arguments of Analysis
- Detector objects carry a group index now, not a pointer to an existing group any more. This facilitates the initialization of Analysis objects via initializer lists, and leaves only a little more responsibility to the user.
- Detector groups passed to Analysis are sorted into two different lists for energy-sensitive and counter detectors. Many dynamic_pointer_cast operations could be removed because of this.
- Analysis has new array member to find detector-group indices.

--- a/include/test/sampler.hpp.in
+++ b/include/test/sampler.hpp.in
@@ -47,11 +47,15 @@ TGraph invert_energy_calibration(const size_t n_detector,
         [&calibration](const double amplitude) {
             return calibration(amplitude, 0);
         },
-        dynamic_pointer_cast<EnergySensitiveDetectorGroup>(
-            analysis.energy_sensitive_detectors[n_detector]->group)
+        analysis
+            .energy_sensitive_detector_groups
+                [analysis.group_index
+                     [analysis.energy_sensitive_detectors[n_detector]->group]]
             ->raw_histogram_properties.lower_edge_of_first_bin,
-        dynamic_pointer_cast<EnergySensitiveDetectorGroup>(
-            analysis.energy_sensitive_detectors[n_detector]->group)
+        analysis
+            .energy_sensitive_detector_groups
+                [analysis.group_index
+                     [analysis.energy_sensitive_detectors[n_detector]->group]]
             ->raw_histogram_properties.upper_edge_of_last_bin);
 }
 
